<resources xmlns:android="http://schemas.android.com/tools">
    <string name="what_is_the_problem">What is the problem?</string>
    <string name="why_is_it_np_complete">Why is it NP-Complete?</string>
    <string name="related_problems">Related Problems</string>
    <string name="more_formally">More formally...</string>
    <string name="credits_links">Credits</string>
    <string name="garey_johnson_citation"> Garey,M.R.;Johnson,D. S.Computers and Intractability:
        A Guide to the Theory of NP-Completeness. Bell Telephone Labotaries, 1979 Print. \n</string>
    <string name="proof_of_correctness">Proof of correctness:</string>
    <string name="app_name">NP Complete Library</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="library_entry">Library Entrance</string>
    <string name="the_basics">THE BASICS</string>
    <string name="all_problems">ALL PROBLEMS</string>
    <string name="see_all">See all</string>
    <string name="made_by_hoyin_chu">Made by Hoyin Chu</string>
    <string name="disclaimer_name">Disclaimer</string>
    <string name="all_problems_comment">and a lot more...but here are the ones that we think are the
        most important to know</string>
    <string name="satisfiability_name">Satisfiability</string>
    <string name="satisfiability_title">Satisfiability (SAT)</string>
    <string name="satisfiability_problem"> Given a boolean formula determine if it is
        satisfiable. That is, if there exist an assignment of variables such that the formula
        would evaluate to true. </string>
    <string name="satisfiability_more_formal"> A propositional logic formula, also called Boolean
        expression, is built from variables, operators AND (conjunction, also denoted by ∧),
        OR (disjunction, ∨), NOT (negation, ¬), and parentheses. A formula is said to be
        satisfiable if it can be made TRUE by assigning appropriate logical values
        (i.e. TRUE, FALSE) to its variables. The Boolean satisfiability problem (SAT) is,
        given a formula, to check whether it is satisfiable. </string>
    <string name="satisfiability_npcomplete_reason"> First it is easy to see the satisfiability
        problem is NP, since a non-deterministic algorithm need only guess an assignment of value
        to the formula to see if it works in polynomial time. The satisfiability problem is
        NP-Complete according to the Cook-Levin theorem, which has the following core idea: \n\t\t
        Given any decision problem in NP,construct a non-deterministic machine that solves it in
        polynomial time. Then for each input to that machine, build a Boolean expression which says
        that the input is passed to the machine, the machine runs correctly, and the machine halts
        and answers "yes". Then the expression can be satisfied if and only if there is a way for
        the machine to run correctly and answer "yes", so the satisfiability of the constructed
        expression is equivalent to asking whether or not the machine will answer "yes". \n\t\t
        Since such machine can solve any NP-problem in polynomial time, which is the very
        definition of being NP-Complete. The satisfiability problem is therefore NP-Complete. \n\t\t
        Another important consequence of the Cook-Levin theorem is that in the proof a boolean
        formula of conjunctive normal form (CNF) was used, therefore we also know that determining
        whether a boolean formula in CNF is satisfiable (CNF-SAT) is NP-Complete. This will become
        helpful later on when we tackle the three-satisfiability (3-SAT) problem. </string>
    <string name="satisfiability_credit1">https://s3.amazonaws.com/content.udacity-data.com/courses/gt-cs6505/npcompleteness.html</string>
    <string name="three_satisfiability_name">Three-Satisfiability  (3-SAT)</string>
    <string name="three_satisfiability_problem"> Given a boolean formula in conjunctive normal
    form with 3 literals in each clause, determine if the formula is satisfiable. For example:</string>
    <string name="three_satisfiability_problem_cont1"> is one such formula.</string>
    <string name="three_satisfiability_npcomplete_reason" android:autolink="web">First it is easy to see 3SAT is in NP
        because given an assignment of the variables one can check if the formula works in
        polynomial time. It is complete because a reduction can be performed from CNF-SAT to 3SAT.
        The trick to the reduction is that for any boolean formula in CNF one can rewrite it as
        a formula in 3-CNF without affecting its overall satisfiability, thus the new rewritten
        formula is satisfiable if and only if the old formula was satisfiable.
        Details of the reduction can be found in this link:
        https://users.fit.cvut.cz/~belohja4/MI-PAA/cv4_SAT-3SAT-and-other-red.pdf
        </string>
    <string name="three_satisfiability_title">Three-Satisfiability (3SAT or 3-CNF-SAT)</string>
    <string name="clique_name">Clique</string>
    <string name="clique_title">Clique</string>
    <string name="clique_problem">A clique is a subset of vertices of an undirected graph such that
        every two distinct vertices in the clique are adjacent. For example, the graph below has a
        clique of size 4 and a clique of size 3.</string>
    <string name="clique_problem_cont1">the clique problem is, given a graph G and an integer k,
        determine if G contains a clique of size k.</string>
    <string name="clique_problem_npcomplete_reason"> We can construct a
        verifier that takes a graph G(V, E), k, and a set of vertices S. Then we can check if there
        exist an edge between every pair of vertices in S and if |S| = k. Since this can be done in
        O(n^2) time, clique is in NP. \n
        There are multiple ways to show clique is NP-complete, including a reduction from 3SAT and
        Independent Set, details of the reduction are in the links below: \n
        3-SAT reduce to clique:
        http://www.ida.liu.se/opendsa/OpenDSA/Books/Everything/html/threeSAT_to_clique.html \n
        Independent Set reduce to clique:
        http://www.ida.liu.se/opendsa/OpenDSA/Books/Everything/html/clique_to_independentSet.html
</string>
    <string name="independent_set_name">Independent Set</string>
    <string name="hamiltonian_cycle_name">Hamiltonian Cycle</string>
    <string name="hamiltonian_path_name">Hamiltonian Path</string>
    <string name="traveling_salesman_name">Traveling Salesman (TSP)</string>
    <string name="vertex_cover_name">Vertex Cover</string>
    <string name="vertex_cover_title">Vertex Cover \n (Minimum Vertex Cover)</string>
    <string name="vertex_cover_problem">A vertex cover in a graph is a set of vertices such that
        every edge of the graph has at least one endpoint in the set. The
        general minimum vertex cover problem asks, given a graph G, find a set of vertices that
        forms the minimum vertex cover, this is NP-Hard. The decision variant of the problem is,
        given a graph G and an integer k, determine if the graph has a vertex cover of size at most
        k, this is NP-Complete. </string>
    <string name="vertex_cover_example_explanation">
        (The red vertices are the minimum vertex cover of the graph)</string>
    <string name="vertex_cover_in_np_reason">Given a graph G(V,E), an integer k and a witness w
        which is a set of vertices, it can be easily verified that w is a vertex cover of size less
        than k by going through the edge list to check if every edge has at least one end point in w,
        and if |w| is less than k. Since this can be done in polynomial time, the decision variant
        of vertex cover is in NP. Notice this does NOT show the general vertex cover problem is in
        NP because given a set of vertices as witness we are unable to verify that they are indeed
        the MINIMUM vertex cover. </string>
    <string name="vertex_cover_reductions">Independent Set and 3SAT can be reduced to
        Vertex Cover. \n Independent Set:http://www.ida.liu.se/opendsa/OpenDSA/Books/Everything/html/independentSet_to_vertexCover.html
        \n 3SAT: https://www8.cs.umu.se/kurser/TDBAfl/VT06/algorithms/LEC/LECTUR16/NODE21.HTM</string>
    <string name="three_dimensional_matching_name">Three Dimensional Matching (3DM)</string>
    <string name="subset_sum_name">Subset Sum</string>
    <string name="subset_sum_title">Subset Sum</string>
    <string name="subset_sum_problem">Given a set of natural numbers and a number k, is there a
        subset such that all the natural number in the subset adds up to k? </string>
    <string name="subset_sum_in_np_reason">Given a set of natural number S, a number k, and a witness
        w which is a subset of S, just check if every element in w is also in S and if all of them sums
        up tp k. This verification can be done in polynomial time therefore the problem is in NP.</string>
    <string name="subset_sum_reduction_intro">3SAT and three dimensional matching can be reduced to subset sum:</string>
    <string name="subset_sum_reduction_link1">3SAT: http://cs.mcgill.ca/~lyepre/pdf/assignment2-solutions/subsetSumNPCompleteness.pdf</string>
    <string name="subset_sum_reduction_link2">Three Dimensional Matching: https://www.cs.cmu.edu/~ckingsf/bioinfo-lectures/3dm.pdf</string>
    <string name="partition_name">Partition</string>
    <string name="three_coloring_name">Three Coloring (3-Color)</string>
    <string name="set_cover_name">Set Cover (Set Basis)</string>
    <string name="set_packing_name">Set Packing</string>
    <string name="subgraph_isomorphism_name">Subgraph Isomorphism</string>
    <string name="longest_path_name">Longest Path</string>
    <string name="feedback_vertex_set_name">Feedback Vertex Set</string>
    <string name="dominating_set_name">Dominating Set</string>
    <string name="bin_packing_name">Bin Packing</string>
    <string name="job_scheduling_name">Job Scheduling</string>
    <string name="feedback_arc_set_name">Feedback Arc Set</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_introduction_title">Introduction</string>
    <string name="disclaimer_introduction_content">The information provided on this mobile application is for
    general informational purposes only. All information on the mobile application is provided in good faith,
    however we make no representation or warranty of any kind, express or implied, regarding the
    accuracy, adequacy, validity, reliability, availability or completeness of any information
    on this mobile application. \n
    Under no circumstance shall we have any reliability to you for any loss or damage of any kind
    incurred as a result of the use of our mobile application or reliance on any information
    provided on out mobile application. Your use of our mobile application and your reliance on our
    information is solely at your own risk. We do not own any images or any linked materials.</string>
    <string name="disclaimer_external_link_title">External Links Disclaimer For Mobile App</string>
    <string name="disclaimer_external_link_content">Our mobile application may contain links to other
        websites or content belonging to or originating from third parties . Such external links are not
        investigated, monitored, or checked for accuracy, adequacy, validity, reliability,
        availability or completeness by us. \n We do not warrant, endorse, guarantee, or assume responsibility
    for the accuracy or reliability of any information offered by third-party websites linked through
    the sites or any websites. We will not be a party to or in any way be responsible for monitoring
    any transaction between you and third-party providers of products or services.</string>
</resources>