<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hoyinpersonal.npcompletelibrary.VertexCoverContent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vertex_cover_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vertex_cover_title"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/vertex_cover_what_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_the_problem"
                android:textColor="@color/colorWhatIsProblem"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/vertex_cover_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vertex_cover_problem"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/vertex_cover_example_graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/vertex_cover_example_graph" />

            <TextView
                android:id="@+id/vertex_cover_graph_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vertex_cover_example_explanation"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/vertex_cover_more_formal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_formally"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/vertex_cover_formal_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/vertex_cover_formal_summary" />

            <TextView
                android:id="@+id/vertex_cover_why_np_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/why_is_it_np_complete"
                android:textColor="@color/colorWhyNPComplete"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/vertex_cover_in_np"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vertex_cover_in_np_reason"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/vertex_cover_reductions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/vertex_cover_reductions"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/vertex_cover_related_problems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/related_problems"
                android:textColor="@color/colorRelatedProblem"
                android:textSize="24sp" />

            <Button
                android:id="@+id/independent-set_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/independent_set_name" />

            <Button
                android:id="@+id/three-satisfiability_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/three_satisfiability_name" />

            <Button
                android:id="@+id/hamiltonian-cycle_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/hamiltonian_cycle_name" />

            <Button
                android:id="@+id/set_cover_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/set_cover_name" />

            <Button
                android:id="@+id/feedback_vertex_set_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/feedback_vertex_set_name" />

            <Button
                android:id="@+id/feedback_arc_set_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/feedback_arc_set_name" />

            <Button
                android:id="@+id/dominating_set_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/dominating_set_name" />

            <TextView
                android:id="@+id/vertex_cover_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits_links"
                android:textColor="@color/colorCredits"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/vertex_cover_credits_link1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garey_johnson_citation" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
