<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hoyinpersonal.npcompletelibrary.DisclaimerContent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/disclaimer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/disclaimer_introduction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_introduction_title"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/disclaimer_introduction_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_introduction_content" />

            <TextView
                android:id="@+id/disclaimer_external_link_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_external_link_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/disclaimer_external_link_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_external_link_content" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
